# matplotlib-training

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _generate_notebooks.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
datasets/: addis_ababa_rainfall.csv  ethiopia_regional_rainfall.csv  prepare_data.py
docs/: Makefile  best_practices.md  conf.py  faq.md  index.md  installation.md
docs/exercises/: exercises_week1.md  exercises_week2.md  exercises_week3.md  exercises_week4.md  solutions_week1.md  solutions_week2.md  solutions_week3.md  solutions_week4.md
docs/modules/: module01.md  module02.md  module03.md  module04.md  module05.md  module06.md  module07.md  module08.md  module09.md  (+8 more)
notebooks/: 01_introduction_to_visualization.ipynb  02_environment_setup.ipynb  03_jupyter_notebook_essentials.ipynb  04_matplotlib_basics.ipynb  05_basic_charts.ipynb  06_styling_plots.ipynb  07_axes_customization.ipynb  08_multiple_plots.ipynb  09_statistical_visualization.ipynb  10_scientific_visualization.ipynb  11_time_series_visualization.ipynb  12_geographic_visualization.ipynb  13_working_with_numpy_pandas.ipynb  14_advanced_matplotlib.ipynb  15_publication_quality.ipynb  16_real_world_projects.ipynb  17_capstone_project.ipynb
quizzes/: quiz_week1.md  quiz_week2.md  quiz_week3.md  quiz_week4.md
scripts/: basic_plots.py  dashboard.py  data_loading.py  maps.py  statistical_plots.py
tests/: test_data.py  test_imports.py  test_plots.py
typst/: macros.typ  main.typ  references.bib  template.typ
(+21 files in other folders)
