[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-training"
version = "1.0.0"
description = "A comprehensive 40-day Matplotlib training course with real-world climate datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Matplotlib Training Course"}]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.0",
    "netCDF4>=1.6",
    "cartopy>=0.22",
    "jupyter>=1.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "pre-commit>=3.5",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=1.3",
    "sphinx-design>=0.5",
]

[tool.setuptools.packages.find]
include = ["scripts", "tests*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
